java_library(
    name = "caliper-runner",
    srcs = glob(["src/main/**/*.java"]),
    deps = [
        "//caliper-api",
        "//caliper-core",
        "//caliper-util",
        "@maven//com/google/code/findbugs:jsr305",
        "@maven//com/google/auto/value",
        "@maven//com/google/dagger",
        "@maven//com/google/dagger:dagger-producers",
        "@maven//com/google/code/gson",
        "@maven//com/google/guava",
        "@maven//com/squareup/okhttp",
        "@maven//joda-time",
    ],
    visibility = ["//:__subpackages__"]
)
