java_library(
    name = "caliper-lib",
    srcs = glob(["src/main/**/*.java"]),
    deps = [
        "//caliper-api",
        "//caliper-core",
        "//caliper-runner",
        "//caliper-util",
        "//caliper-worker-jvm",
        "@maven//com/google/code/findbugs:jsr305",
        "@maven//com/sun/jersey:jersey-client",
        "@maven//com/google/dagger",
        "@maven//com/google/guava",
        "@maven//com/google/code/java-allocation-instrumenter",
    ],
    visibility = ["//:__subpackages__"]
)

java_binary(
    name = "caliper",
    runtime_deps = [":caliper-lib"],
    main_class = "com.google.caliper.runner.CaliperMain"
)