java_test(
    name = "BadUserCodeTest",
    srcs = ["BadUserCodeTest.java"],
    deps = [
        "//caliper:caliper-lib",
        "//caliper-api",
        "//caliper-core",
        "//caliper-runner",
        "//caliper-util",
        "//caliper/src/test/java/com/google/caliper/runner/testing",
        "@maven//com/google/truth",
        "@maven//junit",
        "@maven//org/mockito:mockito-all",
    ],
)

java_test(
    name = "CaliperMainTest",
    srcs = ["CaliperMainTest.java"],
    deps = [
        "//caliper:caliper-lib",
        "@maven//com/google/truth",
        "@maven//junit",
        "@maven//org/mockito:mockito-all",
    ],
)

java_test(
    name = "MalformedBenchmarksTest",
    srcs = ["MalformedBenchmarksTest.java"],
    deps = [
        "//caliper:caliper-lib",
        "//caliper-api",
        "//caliper-core",
        "//caliper-runner",
        "//caliper-util",
        "@maven//com/google/truth",
        "@maven//junit",
        "@maven//org/mockito:mockito-all",
    ],
)
